More refactoring.
git-svn-id: https://svn.code.sf.net/p/mibnavigator/code/mibnavigator@25 04391ee8-9fb0-45f4-8207-3b47ca054329