@@ -49,7 +49,7 @@ public class SnmpCounter32 extends SnmpInteger
     {
         tag = SnmpBERType.SnmpCounter32;
         
-        value = new BigInteger(new Long(newValue).toString());
+        value = new BigInteger(Long.valueOf(newValue).toString());
         
         // wrap if value > maxValue
         value = value.mod(maxValue);
